[package]
name = "tcbpftest-ebpf"
version = "0.1.1"
edition = "2021"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
memoffset = "0.6"
tcbpftest-common = { path = "../tcbpftest-common" }

[[bin]]
name = "tcbpftest"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
