[package]
name = "tcbpftest"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
tcbpftest-common = { path = "../tcbpftest-common", features=["userspace"] }
anyhow = "1.0.42"
bytes = "1"
clap = { version = "3"}
ctrlc = "3.2"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "tcbpftest"
path = "src/main.rs"
