[package]
name = "tcbpftest"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features = ["async_tokio"] }
tcbpftest-common = { path = "../tcbpftest-common", features = ["user"] }
anyhow = "1"
bytes = "1"
ctrlc = "3.2"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { version = "4.1", features = ["derive"] }

[[bin]]
name = "tcbpftest"
path = "src/main.rs"
