[package]
name = "xtask"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-gen = { git = "https://github.com/aya-rs/aya", branch = "main" } 
structopt = {version = "0.3", default-features = false }
anyhow = "1"
