[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-tool = { git = "https://github.com/aya-rs/aya", branch = "main" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
